src/cpp/gde_c_interface.h

GDE_EXPORT GDExtensionTypeFromVariantConstructorFunc gde_get_variant_to_type_constructor(GDExtensionVariantType p_type);
GDE_EXPORT GDExtensionVariantType gde_variant_get_type(GDExtensionConstVariantPtr p_self);
GDE_EXPORT void gde_variant_call(GDExtensionVariantPtr p_self, GDExtensionConstStringNamePtr p_method,
                                 const GDExtensionConstVariantPtr *p_args, GDExtensionInt p_argument_count,
                                 GDExtensionUninitializedVariantPtr r_return, GDExtensionCallError *r_error);
GDE_EXPORT GDExtensionPtrGetter gde_variant_get_ptr_getter(GDExtensionVariantType p_type,
                                                           GDExtensionConstStringNamePtr p_member);
GDE_EXPORT GDExtensionPtrSetter gde_variant_get_ptr_setter(GDExtensionVariantType p_type,
                                                           GDExtensionConstStringNamePtr p_member);
GDE_EXPORT GDExtensionPtrIndexedGetter gde_variant_get_ptr_indexed_getter(GDExtensionVariantType p_type);
GDE_EXPORT GDExtensionPtrIndexedSetter gde_variant_get_ptr_indexed_setter(GDExtensionVariantType p_type);
GDE_EXPORT GDExtensionPtrKeyedSetter gde_variant_get_ptr_keyed_setter(GDExtensionVariantType p_type);
GDE_EXPORT GDExtensionPtrKeyedGetter gde_variant_get_ptr_keyed_getter(GDExtensionVariantType p_type);
GDE_EXPORT GDExtensionPtrKeyedChecker gde_variant_get_ptr_keyed_checker(GDExtensionVariantType p_type);
GDE_EXPORT void gde_variant_get_indexed(GDExtensionConstVariantPtr p_self, GDExtensionInt p_index,
                                        GDExtensionUninitializedVariantPtr r_ret, GDExtensionBool *r_valid,
                                        GDExtensionBool *r_oob);
GDE_EXPORT void gde_variant_set_indexed(GDExtensionVariantPtr p_self, GDExtensionInt p_index,
                                        GDExtensionConstVariantPtr p_value, GDExtensionBool *r_valid,
                                        GDExtensionBool *r_oob);
GDE_EXPORT void gde_string_new_with_utf8_chars(GDExtensionUninitializedStringPtr r_dest, const char *p_contents);
GDE_EXPORT GDExtensionInt gde_string_to_utf8_chars(GDExtensionConstStringPtr p_self, char *r_text,
                                                   GDExtensionInt p_max_write_length);
GDE_EXPORT GDExtensionInt gde_string_to_utf16_chars(GDExtensionConstStringPtr p_self, char16_t *r_text,
                                                    GDExtensionInt p_max_write_length);
GDE_EXPORT GDExtensionObjectPtr gde_global_get_singleton(GDExtensionConstStringNamePtr p_name);
GDE_EXPORT void *gde_classdb_get_class_tag(GDExtensionConstStringNamePtr p_classname);
GDE_EXPORT void gde_classdb_register_extension_class(GDExtensionClassLibraryPtr p_library,
                                                     GDExtensionConstStringNamePtr p_class_name,
                                                     GDExtensionConstStringNamePtr p_parent_class_name,
                                                     const GDExtensionClassCreationInfo *p_extension_funcs);