src/dart/godot_dart/lib/src/core/gdextension_ffi_bindings.dart


  late final _gde_get_variant_to_type_constructorPtr = _lookup<
      ffi.NativeFunction<
          GDExtensionTypeFromVariantConstructorFunc Function(
              ffi.Int32)>>('gde_get_variant_to_type_constructor');
  late final _gde_get_variant_to_type_constructor =
      _gde_get_variant_to_type_constructorPtr.asFunction<
          GDExtensionTypeFromVariantConstructorFunc Function(int)>();

  int gde_variant_get_type(
    GDExtensionConstVariantPtr p_self,
  ) {
    return _gde_variant_get_type(
      p_self,
    );
  }

  late final _gde_variant_get_typePtr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(GDExtensionConstVariantPtr)>>(
      'gde_variant_get_type');
  late final _gde_variant_get_type = _gde_variant_get_typePtr
      .asFunction<int Function(GDExtensionConstVariantPtr)>();

  void gde_variant_call(
    GDExtensionVariantPtr p_self,
    GDExtensionConstStringNamePtr p_method,
    ffi.Pointer<GDExtensionConstVariantPtr> p_args,
    int p_argument_count,
    GDExtensionUninitializedVariantPtr r_return,
    ffi.Pointer<GDExtensionCallError> r_error,
  ) {
    return _gde_variant_call(
      p_self,
      p_method,
      p_args,
      p_argument_count,
      r_return,
      r_error,
    );
  }

  late final _gde_variant_callPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              GDExtensionVariantPtr,
              GDExtensionConstStringNamePtr,
              ffi.Pointer<GDExtensionConstVariantPtr>,
              GDExtensionInt,
              GDExtensionUninitializedVariantPtr,
              ffi.Pointer<GDExtensionCallError>)>>('gde_variant_call');
  late final _gde_variant_call = _gde_variant_callPtr.asFunction<
      void Function(
          GDExtensionVariantPtr,
          GDExtensionConstStringNamePtr,
          ffi.Pointer<GDExtensionConstVariantPtr>,
          int,
          GDExtensionUninitializedVariantPtr,
          ffi.Pointer<GDExtensionCallError>)>();

  GDExtensionPtrGetter gde_variant_get_ptr_getter(
    int p_type,
    GDExtensionConstStringNamePtr p_member,
  ) {
    return _gde_variant_get_ptr_getter(
      p_type,
      p_member,
    );
  }

  late final _gde_variant_get_ptr_getterPtr = _lookup<
      ffi.NativeFunction<
          GDExtensionPtrGetter Function(ffi.Int32,
              GDExtensionConstStringNamePtr)>>('gde_variant_get_ptr_getter');
  late final _gde_variant_get_ptr_getter =
      _gde_variant_get_ptr_getterPtr.asFunction<
          GDExtensionPtrGetter Function(int, GDExtensionConstStringNamePtr)>();

  GDExtensionPtrSetter gde_variant_get_ptr_setter(
    int p_type,
    GDExtensionConstStringNamePtr p_member,
  ) {
    return _gde_variant_get_ptr_setter(
      p_type,
      p_member,
    );
  }

  late final _gde_variant_get_ptr_setterPtr = _lookup<
      ffi.NativeFunction<
          GDExtensionPtrSetter Function(ffi.Int32,
              GDExtensionConstStringNamePtr)>>('gde_variant_get_ptr_setter');
  late final _gde_variant_get_ptr_setter =
      _gde_variant_get_ptr_setterPtr.asFunction<
          GDExtensionPtrSetter Function(int, GDExtensionConstStringNamePtr)>();

  GDExtensionPtrIndexedGetter gde_variant_get_ptr_indexed_getter(
    int p_type,
  ) {
    return _gde_variant_get_ptr_indexed_getter(
      p_type,
    );
  }

  late final _gde_variant_get_ptr_indexed_getterPtr = _lookup<
          ffi.NativeFunction<GDExtensionPtrIndexedGetter Function(ffi.Int32)>>(
      'gde_variant_get_ptr_indexed_getter');
  late final _gde_variant_get_ptr_indexed_getter =
      _gde_variant_get_ptr_indexed_getterPtr
          .asFunction<GDExtensionPtrIndexedGetter Function(int)>();

  GDExtensionPtrIndexedSetter gde_variant_get_ptr_indexed_setter(
    int p_type,
  ) {
    return _gde_variant_get_ptr_indexed_setter(
      p_type,
    );
  }

  late final _gde_variant_get_ptr_indexed_setterPtr = _lookup<
          ffi.NativeFunction<GDExtensionPtrIndexedSetter Function(ffi.Int32)>>(
      'gde_variant_get_ptr_indexed_setter');
  late final _gde_variant_get_ptr_indexed_setter =
      _gde_variant_get_ptr_indexed_setterPtr
          .asFunction<GDExtensionPtrIndexedSetter Function(int)>();

  GDExtensionPtrKeyedSetter gde_variant_get_ptr_keyed_setter(
    int p_type,
  ) {
    return _gde_variant_get_ptr_keyed_setter(
      p_type,
    );
  }

  late final _gde_variant_get_ptr_keyed_setterPtr = _lookup<
          ffi.NativeFunction<GDExtensionPtrKeyedSetter Function(ffi.Int32)>>(
      'gde_variant_get_ptr_keyed_setter');
  late final _gde_variant_get_ptr_keyed_setter =
      _gde_variant_get_ptr_keyed_setterPtr
          .asFunction<GDExtensionPtrKeyedSetter Function(int)>();

  GDExtensionPtrKeyedGetter gde_variant_get_ptr_keyed_getter(
    int p_type,
  ) {
    return _gde_variant_get_ptr_keyed_getter(
      p_type,
    );
  }

  late final _gde_variant_get_ptr_keyed_getterPtr = _lookup<
          ffi.NativeFunction<GDExtensionPtrKeyedGetter Function(ffi.Int32)>>(
      'gde_variant_get_ptr_keyed_getter');
  late final _gde_variant_get_ptr_keyed_getter =
      _gde_variant_get_ptr_keyed_getterPtr
          .asFunction<GDExtensionPtrKeyedGetter Function(int)>();

  GDExtensionPtrKeyedChecker gde_variant_get_ptr_keyed_checker(
    int p_type,
  ) {
    return _gde_variant_get_ptr_keyed_checker(
      p_type,
    );
  }

  late final _gde_variant_get_ptr_keyed_checkerPtr = _lookup<
          ffi.NativeFunction<GDExtensionPtrKeyedChecker Function(ffi.Int32)>>(
      'gde_variant_get_ptr_keyed_checker');
  late final _gde_variant_get_ptr_keyed_checker =
      _gde_variant_get_ptr_keyed_checkerPtr
          .asFunction<GDExtensionPtrKeyedChecker Function(int)>();

  void gde_variant_get_indexed(
    GDExtensionConstVariantPtr p_self,
    int p_index,
    GDExtensionUninitializedVariantPtr r_ret,
    ffi.Pointer<GDExtensionBool> r_valid,
    ffi.Pointer<GDExtensionBool> r_oob,
  ) {
    return _gde_variant_get_indexed(
      p_self,
      p_index,
      r_ret,
      r_valid,
      r_oob,
    );
  }

  late final _gde_variant_get_indexedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              GDExtensionConstVariantPtr,
              GDExtensionInt,
              GDExtensionUninitializedVariantPtr,
              ffi.Pointer<GDExtensionBool>,
              ffi.Pointer<GDExtensionBool>)>>('gde_variant_get_indexed');
  late final _gde_variant_get_indexed = _gde_variant_get_indexedPtr.asFunction<
      void Function(
          GDExtensionConstVariantPtr,
          int,
          GDExtensionUninitializedVariantPtr,
          ffi.Pointer<GDExtensionBool>,
          ffi.Pointer<GDExtensionBool>)>();

  void gde_variant_set_indexed(
    GDExtensionVariantPtr p_self,
    int p_index,
    GDExtensionConstVariantPtr p_value,
    ffi.Pointer<GDExtensionBool> r_valid,
    ffi.Pointer<GDExtensionBool> r_oob,
  ) {
    return _gde_variant_set_indexed(
      p_self,
      p_index,
      p_value,
      r_valid,
      r_oob,
    );
  }

  late final _gde_variant_set_indexedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              GDExtensionVariantPtr,
              GDExtensionInt,
              GDExtensionConstVariantPtr,
              ffi.Pointer<GDExtensionBool>,
              ffi.Pointer<GDExtensionBool>)>>('gde_variant_set_indexed');
  late final _gde_variant_set_indexed = _gde_variant_set_indexedPtr.asFunction<
      void Function(GDExtensionVariantPtr, int, GDExtensionConstVariantPtr,
          ffi.Pointer<GDExtensionBool>, ffi.Pointer<GDExtensionBool>)>();

  void gde_string_new_with_utf8_chars(
    GDExtensionUninitializedStringPtr r_dest,
    ffi.Pointer<ffi.Char> p_contents,
  ) {
    return _gde_string_new_with_utf8_chars(
      r_dest,
      p_contents,
    );
  }

  late final _gde_string_new_with_utf8_charsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(GDExtensionUninitializedStringPtr,
              ffi.Pointer<ffi.Char>)>>('gde_string_new_with_utf8_chars');
  late final _gde_string_new_with_utf8_chars =
      _gde_string_new_with_utf8_charsPtr.asFunction<
          void Function(
              GDExtensionUninitializedStringPtr, ffi.Pointer<ffi.Char>)>();

  int gde_string_to_utf8_chars(
    GDExtensionConstStringPtr p_self,
    ffi.Pointer<ffi.Char> r_text,
    int p_max_write_length,
  ) {
    return _gde_string_to_utf8_chars(
      p_self,
      r_text,
      p_max_write_length,
    );
  }

  late final _gde_string_to_utf8_charsPtr = _lookup<
      ffi.NativeFunction<
          GDExtensionInt Function(
              GDExtensionConstStringPtr,
              ffi.Pointer<ffi.Char>,
              GDExtensionInt)>>('gde_string_to_utf8_chars');
  late final _gde_string_to_utf8_chars =
      _gde_string_to_utf8_charsPtr.asFunction<
          int Function(
              GDExtensionConstStringPtr, ffi.Pointer<ffi.Char>, int)>();

  int gde_string_to_utf16_chars(
    GDExtensionConstStringPtr p_self,
    ffi.Pointer<char16_t> r_text,
    int p_max_write_length,
  ) {
    return _gde_string_to_utf16_chars(
      p_self,
      r_text,
      p_max_write_length,
    );
  }

  late final _gde_string_to_utf16_charsPtr = _lookup<
      ffi.NativeFunction<
          GDExtensionInt Function(
              GDExtensionConstStringPtr,
              ffi.Pointer<char16_t>,
              GDExtensionInt)>>('gde_string_to_utf16_chars');
  late final _gde_string_to_utf16_chars =
      _gde_string_to_utf16_charsPtr.asFunction<
          int Function(
              GDExtensionConstStringPtr, ffi.Pointer<char16_t>, int)>();

  GDExtensionObjectPtr gde_global_get_singleton(
    GDExtensionConstStringNamePtr p_name,
  ) {
    return _gde_global_get_singleton(
      p_name,
    );
  }

  late final _gde_global_get_singletonPtr = _lookup<
      ffi.NativeFunction<
          GDExtensionObjectPtr Function(
              GDExtensionConstStringNamePtr)>>('gde_global_get_singleton');
  late final _gde_global_get_singleton =
      _gde_global_get_singletonPtr.asFunction<
          GDExtensionObjectPtr Function(GDExtensionConstStringNamePtr)>();

  ffi.Pointer<ffi.Void> gde_classdb_get_class_tag(
    GDExtensionConstStringNamePtr p_classname,
  ) {
    return _gde_classdb_get_class_tag(
      p_classname,
    );
  }

  late final _gde_classdb_get_class_tagPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              GDExtensionConstStringNamePtr)>>('gde_classdb_get_class_tag');
  late final _gde_classdb_get_class_tag =
      _gde_classdb_get_class_tagPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(GDExtensionConstStringNamePtr)>();

  void gde_classdb_register_extension_class(
    GDExtensionClassLibraryPtr p_library,
    GDExtensionConstStringNamePtr p_class_name,
    GDExtensionConstStringNamePtr p_parent_class_name,
    ffi.Pointer<GDExtensionClassCreationInfo> p_extension_funcs,
  ) {
    return _gde_classdb_register_extension_class(
      p_library,
      p_class_name,
      p_parent_class_name,
      p_extension_funcs,
    );
  }

  late final _gde_classdb_register_extension_classPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  GDExtensionClassLibraryPtr,
                  GDExtensionConstStringNamePtr,
                  GDExtensionConstStringNamePtr,
                  ffi.Pointer<GDExtensionClassCreationInfo>)>>(
      'gde_classdb_register_extension_class');
  late final _gde_classdb_register_extension_class =
      _gde_classdb_register_extension_classPtr.asFunction<
          void Function(
              GDExtensionClassLibraryPtr,
              GDExtensionConstStringNamePtr,
              GDExtensionConstStringNamePtr,
              ffi.Pointer<GDExtensionClassCreationInfo>)>();
